--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -31,6 +31,8 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: ORDER_EXPIRATION_WINDOW_SECONDS
+              value: "900"
 ---
 apiVersion: v1
 kind: Service
