--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -48,3 +48,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: deltalf/tickets_app_payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
