--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: client
           image: deltalf/tickets_app_client
+          env:
+            - name: STRIPE_PUBLIC_KEY
+              value: "pk_test_51L162lIrn3mjRyoLe8aB5fjEfKrJCdj4xlmCfdEEV3nM53IXmpy4gtfz3vOTSzNtRs5roinotk0pFbl47whAEsjv00sZOy6ztp"
 ---
 apiVersion: v1
 kind: Service
