--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -4,7 +4,7 @@ name: tests-auth
 on:
   pull_request:
     paths:
-      - "auth/**"
+      - 'auth/**'
 
 # what to do when events tirggered
 jobs:
